# deepmind-code

./: .dmcignore  .gitignore  README.md  install.sh  pyproject.toml
src/deepmind_code/: main.py
src/deepmind_code/commands/: agent.py  chat.py  edit.py  shell.py
src/deepmind_code/core/: config.py  context.py  tools.py
src/deepmind_code/providers/: llm.py
tests/: test_config.py  test_context.py
